--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@ p { line-height: 1.6; font-size: 1.05em; }
 <body>
 
 <!-- Background Music -->
-<audio id="bgMusic" autoplay loop>
+<audio id="bgMusic" autoplay loop muted playsinline>
   <source src="music.mp3" type="audio/mpeg">
 </audio>
 
@@ -157,7 +157,7 @@ p { line-height: 1.6; font-size: 1.05em; }
     Did you smile even a little while reading this?
   </p>
 
-  <p style="margin-top:15px;">— <b id="yourName">Mounesh</b></p>
+  <p style="margin-top:15px;">— <b id="yourName">Mounesh (useless)</b></p>
 
   <!-- Hidden Message -->
   <div class="secret-btn" onclick="revealMessage()">tap gently ✨</div>
@@ -199,26 +199,38 @@ function nextSlide() {
   }
 }
 
-/* Pause / Play & Music */
-let paused = false;
+/* Background Music */
 let bgMusic = document.getElementById("bgMusic");
 let modal = document.getElementById("modal");
 
-document.getElementById("pauseBtn").addEventListener("click", () => {
-  if (!paused) {
-    clearInterval(interval);
-    bgMusic.pause();
-    modal.style.display = "flex"; // show modal
+// Try to play music on page load
+window.addEventListener("load", () => {
+  bgMusic.muted = false;
+  let playPromise = bgMusic.play();
+  if (playPromise !== undefined) {
+    playPromise.catch(() => {
+      // Music autoplay blocked, wait for user interaction
+      document.body.addEventListener("click", () => {
+        bgMusic.play();
+      }, { once: true });
+    });
   }
 });
 
-/* Close modal and resume */
+/* Pause / Play with Modal */
+document.getElementById("pauseBtn").addEventListener("click", () => {
+  clearInterval(interval);
+  bgMusic.pause();
+  modal.style.display = "flex"; // show modal
+});
+
+/* Close modal and resume slideshow & music */
 document.getElementById("closeModal").addEventListener("click", () => {
   modal.style.display = "none";
   interval = setInterval(nextSlide, 3500);
   bgMusic.play();
 });
-  
+
 /* Hidden Message */
 function revealMessage() {
   document.getElementById("secretMsg").style.display = "block";
